Fixed Plan-Type Section Alignment

--- a/css/style.css
+++ b/css/style.css
@@ -146,17 +146,24 @@ h1 {
 .row {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 100px;
+
 }
 
 .col {
-    display: flex;
+    /* display: flex;
     flex-direction: column;
-    flex-basis: 30%;
+    flex-basis: 30%; */
+    width: 30%;
     border: 1px solid black;
 }
 
 .col:only-child {
     padding: 30px;
+}
+
+.card-top {
+    /* height: 50%; */
 }
 
 .plan-type {
@@ -168,7 +175,7 @@ h1 {
 
 /* Stile per tipo di abbonamento */
 
-.subscription, .free-subscription, .buy, #pad, .highlights {
+.subscription, .free-subscription, .buy, .highlights {
     padding: 20px;
 }
 
@@ -214,6 +221,15 @@ h1 {
     border-top: 1px solid gray;
 }
 
+/* Stili modifier del button per renderlo a larghezza fissa  */
+
+.centered {
+    padding-left: 30%;
+    padding-right: 30%;
+}
+
+/* Stile parte sottostante della sezione plan-type  */
+
 .highlights h4 {
     font-weight: 900;
     padding-left: 15px;
@@ -222,6 +238,7 @@ h1 {
 .highlights {
     display: flex;
     flex-direction: column;
+    flex-basis: 50%;
 }
 
 .list {
